[package]
name = "common-tracing"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
test = false

[features]
console = ["console-subscriber"]

[dependencies] # In alphabetical order

# Crates.io dependencies
console-subscriber = { version = "0.1.8", optional = true }
once_cell = "1.15.0"
anyhow = "1.0.65"
opentelemetry = { version = "0.18.0", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }
sentry-tracing = "0.27.0"
serde = { version = "1.0.145", features = ["derive"] }
tonic = "0.8.1"
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "ansi"] }
